<resources>

    <string name="app_name">PassVault</string>
    <string name="generate_button">Generate</string>
    <string name="copy_button">Copy</string>
    <string name="press_generate">PRESS GENERATE</string>
    <string name="password_length">Length</string>
    <string name="password_length_num"></string>
    <string name="password_lowercases">Lowercases</string>
    <string name="password_uppercases">Uppercases</string>
    <string name="password_numbers">Numbers</string>
    <string name="password_special">Special characters</string>
    <string name="sign_in_btn_string">Sign In</string>
    <string name="add_head">Please provide the required data:</string>
    <string name="add_input_title">Title:</string>
    <string name="add_input_url">URL (optional):</string>
    <string name="add_input_username">Username:</string>
    <string name="add_input_password">Password:</string>

    <string name="generate_password">Generate Password</string>
    <string name="edit_logo">Edit Logo</string>
    <string name="create_profile">Create</string>

    <string name="delete_account">Delete Account</string>
    <string name="change_master_password">Modify Master Password</string>

    <string name="welcome_text">Welcome to PassVault. Provide your master password below or press "Setup Vault" to get started.</string>
    <string name="open_vault">Open Vault</string>
    <string name="setup_vault">Setup Vault</string>

    <string name="register_master_password_warning">Please remember this password and only keep it somewhere safe, as you will not be able to recover it in case it is lost.</string>
    <string name="add_input_master_password">Master Password:</string>
    <string name="add_input_master_password_again">Master Password again:</string>
    <string name="reset_input">Reset input</string>
    <string name="save_registration">Save</string>
    <string name="password_length_indicator">12</string>
    <string name="password_strength_indicator">Password strength: </string>
    <string name="cipher_setup_error">Error: Could not setup en-/decryption algorithm</string>
    <string name="needs_relogin">You need to login again.</string>
    <string name="password_strength">PASSWORD STRENGTH:</string>
    <string name="password_strength_var"></string>

    <string name="wrong_password">Wrong password entered</string>
    <string name="wrong_password_or_something_wrong">Wrong password entered (or something else went wrong).</string>
    <string name="success">Success</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="master_password_created">Master password created!</string>
    <string name="turn_on_settings">Please turn on some of the settings</string>

    <string name="strength_weak">WEAK</string>
    <string name="strength_strong">STRONG</string>
    <string name="strength_very_strong">VERY STRONG</string>

    <string name="generated_successfully">Password generated successfully</string>
    <string name="no_password_generated">No password generated</string>
    <string name="pass_copied_to_clipboard">Generated password copied to clipboard</string>
    <string name="please_generate_password">Please generate a password</string>

    <string name="error_occurred">An error occurred!</string>
    <string name="passwords_not_identical">The passwords are not identical</string>

    <string name="autofill_title">PassVault AutoFill</string>
    <string name="autofill_prompt">Do you want to use PassVault as your primary AutoFill application?</string>
    <string name="select_passvault">Please select \"PassVault Password Manager\"</string>
    <string name="select_passvault_long">Please select \"PassVault Password Manager\" under \"Advanced\" -> \"Autofill service\"</string>

    <string name="invalid_url">Invalid URL provided</string>

    <string name="username_copied">Username copied to clipboard</string>
    <string name="password_copied">Password copied to clipboard</string>
    <string name="no_username_to_copy">No username to copy</string>
    <string name="no_password_to_copy">No password to copy</string>
    <string name="new_item_title">Add new item to Vault</string>
    <string name="platform">Platform:</string>
    <string name="password_generator_title">PASSWORD GENERATOR</string>
    <string name="password_generated_settings_header">Password generated:</string>
    <string name="settings_header">SETTINGS:</string>
    <string name="ok_btn">OK</string>
    <string name="copy_btn">COPY</string>
    <string name="masster_password_autofill_text">Please enter master password to use Autofill</string>
    <string name="autofill_btn">Autofill</string>
    <string name="app_text">App</string>
    <string name="website_text">Website</string>
    <string name="example_website_hint">https://www.example.com</string>
    <string name="loading_text">Loading…</string>
    <string name="copy_username_text">Copy Username</string>
    <string name="copy_password_text">Copy password</string>
    <string name="delete_btn">Delete</string>

    <string name="master_password_too_short">The password is too short. It must be at minimum 8 characters.</string>

    <string name="must_specify_platform">You need to specify a platform</string>
    <string name="must_specify_title">You need to specify a title</string>
    <string name="must_specify_username">You need to specify a username</string>
    <string name="must_specify_password">You need to specify a password</string>

    <string name="vault_empty">Vault is empty</string>

    <string name="welcome_dialog_title">Welcome to PassVault!</string>
    <string name="welcome_dialog_content">It\'s time to upgrade your password security!\n\nStart by creating a secure master password.\n\nThen access your Vault and add your credentials (make sure to generate a secure password) from the services/platforms you use on daily basis.\n\nAfter this step, the setup is complete!</string>

    <string name="vault_item_created">Vault item created</string>

</resources>