<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textView"
        android:layout_width="127dp"
        android:layout_height="0dp"
        android:text="@string/add_input_url"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="188dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="215dp"
        android:layout_height="24dp"
        android:ems="10"
        android:hint="@string/add_input_url"
        android:text="Name"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="207dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_head"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="98dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_input_password"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="374dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_input_username"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="419dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_input_title"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="454dp" />

</androidx.constraintlayout.widget.ConstraintLayout>