<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDTU">

    <TextView
        android:id="@+id/generatedPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/generated_password"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="200dp"
        android:text="@string/generate_button" />

    <Button
        android:id="@+id/copyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="85dp"
        android:text="@string/copy_button" />

    <TextView
        android:id="@+id/passwordLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="280dp"
        android:text="@string/password_length" />

    <SeekBar
        android:id="@+id/lengthBar"
        android:layout_width="130dp"
        android:layout_height="20dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="73dp"
        android:progress="12" />

    <TextView
        android:id="@+id/passwordLowercases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="320dp"
        android:text="@string/password_lowercases" />

    <Switch
        android:id="@+id/lowercasesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/passwordLowercases"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="85dp"
        android:checked="true" />

    <TextView
        android:id="@+id/passwordUppercases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="360dp"
        android:text="@string/password_uppercases" />

    <Switch
        android:id="@+id/uppercasesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/passwordUppercases"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="85dp"
        android:checked="true" />


    <TextView
        android:id="@+id/passwordNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="400dp"
        android:text="@string/password_numbers" />

    <Switch
        android:id="@+id/numbersSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/passwordNumbers"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="85dp"
        android:checked="true" />


    <TextView
        android:id="@+id/passwordSpecial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="440dp"
        android:text="@string/password_special" />

    <Switch
        android:id="@+id/specialSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/passwordSpecial"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="85dp"
        android:checked="true" />


</RelativeLayout>