<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDTU"
    tools:context=".PasswordGeneratorActivity">

    <TextView
        android:id="@+id/generatedPassword"
        android:layout_width="249dp"
        android:layout_height="39dp"
        android:text="@string/generated_password"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <Button
        android:id="@+id/copyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/copy_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/generatedPassword"
        app:layout_constraintTop_toBottomOf="@+id/generatedPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/passwordLowercases"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/password_lowercases"
        app:layout_constraintStart_toStartOf="@+id/passwordLength"
        app:layout_constraintTop_toBottomOf="@+id/passwordLength" />

    <TextView
        android:id="@+id/passwordLength"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/password_length"
        app:layout_constraintStart_toStartOf="@+id/generateButton"
        app:layout_constraintTop_toBottomOf="@+id/generateButton" />

    <Button
        android:id="@+id/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/generate_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/generatedPassword"
        app:layout_constraintTop_toBottomOf="@+id/generatedPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/passwordSpecial"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/password_special"
        app:layout_constraintStart_toStartOf="@+id/passwordNumbers"
        app:layout_constraintTop_toBottomOf="@+id/passwordNumbers" />

    <TextView
        android:id="@+id/passwordUppercases"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/password_uppercases"
        app:layout_constraintStart_toStartOf="@+id/passwordLowercases"
        app:layout_constraintTop_toBottomOf="@+id/passwordLowercases" />

    <TextView
        android:id="@+id/passwordNumbers"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/password_numbers"
        app:layout_constraintStart_toStartOf="@+id/passwordUppercases"
        app:layout_constraintTop_toBottomOf="@+id/passwordUppercases" />

    <SeekBar
        android:id="@+id/lengthBar"
        android:layout_width="130dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:progress="12"
        app:layout_constraintStart_toStartOf="@+id/copyButton"
        app:layout_constraintTop_toBottomOf="@+id/copyButton" />

    <Switch
        android:id="@+id/lowercasesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@+id/lengthBar"
        app:layout_constraintTop_toBottomOf="@+id/lengthBar" />

    <Switch
        android:id="@+id/uppercasesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@+id/lowercasesSwitch"
        app:layout_constraintTop_toBottomOf="@+id/lowercasesSwitch" />

    <Switch
        android:id="@+id/numbersSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@+id/uppercasesSwitch"
        app:layout_constraintTop_toBottomOf="@+id/uppercasesSwitch" />

    <Switch
        android:id="@+id/specialSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@+id/numbersSwitch"
        app:layout_constraintTop_toBottomOf="@+id/numbersSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>