<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:weightSum="100">

        <TextView
            android:id="@+id/passwordGeneratorTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/password_generator_title"
            android:textColor="@color/DTU"
            android:textSize="30sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <TextView
            android:id="@+id/settingsTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/password_generated_settings_header"
            android:textColor="#939393" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@drawable/rectangle"
            android:orientation="vertical">

            <TextView
                android:id="@+id/generatedPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/press_generate"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <TextView
            android:id="@+id/settingsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/settings_header"
            android:textColor="#939393" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/passwordLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/password_length"
                android:textColor="@color/DTU"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <SeekBar
                android:id="@+id/lengthBar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:scrollbarSize="10dp"
                android:theme="@style/SwitchTheme"
                android:max="32"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/passwordLengthNum"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/passwordLengthNum"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:text="@string/password_length_num"
                android:textColor="@color/DTU"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordLowercases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/password_lowercases"
                android:textColor="@color/DTU"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <Switch

                android:id="@+id/lowercasesSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/passwordLowercases"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:checked="true"
                android:textSize="18sp"
                android:theme="@style/SwitchTheme" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordUppercases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/password_uppercases"
                android:textColor="@color/DTU"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/uppercasesSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/passwordUppercases"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:checked="true"
                android:textSize="18sp"
                android:theme="@style/SwitchTheme" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/password_numbers"
                android:textColor="@color/DTU"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/numbersSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/passwordNumbers"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:checked="true"
                android:textSize="18sp"
                android:theme="@style/SwitchTheme" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordSpecial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:text="@string/password_special"
                android:textColor="@color/DTU"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/specialSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/passwordSpecial"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:checked="true"
                android:textSize="18sp"
                android:theme="@style/SwitchTheme" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/passwordStrength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/password_strength"
                    android:textColor="#939393" />

                <TextView
                    android:id="@+id/passwordStrengthVar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/password_strength_var"
                    android:textColor="#939393" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/strength_progressbar"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:progressDrawable="@drawable/pb_drawable_green" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="6" />

        <Button
            android:id="@+id/generateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DTU"
            android:text="@string/generate_button"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/DTU"
                android:text="@string/ok_btn"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.05" />

            <Button
                android:id="@+id/copyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/copy_btn"
                android:textColor="@color/DTU"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>